# adhoc-chat

./: .gitignore  CMakeLists.txt  ChatHeader.qml  CodeSharePopup.qml  CreateRoomDialog.qml  HomePage.qml  Main.qml  MembersPanel.qml  MessageComposer.qml  MessageContextMenu.qml  MessageList.qml  NetworkSetup.cpp  NetworkSetup.h  README.md  ReactionPicker.qml  RegistrationDialog.qml  RoomManager.js  SETUP_GUIDE.md  SettingsPanel.qml  Sidebar.qml  TypingIndicator.qml  main.cpp
backend/: config.py  setup-adhoc-link.py  setup-adhoc-network.sh  setup-sudoers.sh  sudoers-adhoc
